--- a/scss/blocks/_info.scss
+++ b/scss/blocks/_info.scss
@@ -96,15 +96,15 @@
 }
 
 .info__head3 {
-    // margin-right: 57px;
+    margin-right: 57px;
 }
 
 .info__head4 {
-    // margin-right: 129px;
+    margin-right: 129px;
 }
 
 .info__head5 {
-    // margin-right: 63px;
+    margin-right: 63px;
 }
 
 .info__head6 {
