--- a/scss/main.css
+++ b/scss/main.css
@@ -3323,6 +3323,18 @@ body {
   margin-right: 130px;
 }
 
+.info__head3 {
+  margin-right: 57px;
+}
+
+.info__head4 {
+  margin-right: 129px;
+}
+
+.info__head5 {
+  margin-right: 63px;
+}
+
 .info__head6 {
   margin-right: 63px;
 }
